--- a/restaurant.html
+++ b/restaurant.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <link rel="icon" href="/img/favicon.ico">
   <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <!-- Main CSS file -->
